[gd_scene load_steps=3 format=3 uid="uid://b4sugr4uluc2r"]

[ext_resource type="Script" uid="uid://1nf36h0gms3q" path="res://addons/maaacks_game_template/base/scripts/capture_focus.gd" id="2_o0fkt"]
[ext_resource type="Script" uid="uid://b1av7sutp27kl" path="res://scenes/overlaid_menus/game_won_menu.gd" id="2_uvhaa"]

[node name="GameWonMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_uvhaa")
pauses_game = true

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.12549)

[node name="MenuPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(432, 240)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="BoxContainer" type="BoxContainer" parent="MenuPanelContainer/MarginContainer"]
layout_mode = 2
vertical = true

[node name="TitleMargin" type="MarginContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer"]
visible = false
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/TitleMargin"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Menu"
horizontal_alignment = 1

[node name="DescriptionMargin" type="MarginContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin"]
layout_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Final Tomb Excavated![/center]"
fit_content = true
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/VBoxContainer"]
layout_mode = 2

[node name="RoomsScoreContainer" type="HBoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RoomsLabel" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/VBoxContainer/RoomsScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rooms:"
horizontal_alignment = 2

[node name="RoomsScoreLabel" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/VBoxContainer/RoomsScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1 / 1"
horizontal_alignment = 1

[node name="ArtifactsScoreContainer" type="HBoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/VBoxContainer"]
layout_mode = 2

[node name="ArtifactsLabel" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/VBoxContainer/ArtifactsScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Artifacts:"
horizontal_alignment = 2

[node name="ArtifactsScoreLabel" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/VBoxContainer/ArtifactsScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1 / 1"
horizontal_alignment = 1

[node name="CultureScoreContainer" type="HBoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/VBoxContainer"]
layout_mode = 2

[node name="CultureLabel" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/VBoxContainer/CultureScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Culture:"
horizontal_alignment = 2

[node name="CultureScoreLabel" type="Label" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin/VBoxContainer/CultureScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1 / 1"
horizontal_alignment = 1

[node name="MenuButtonsMargin" type="MarginContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer"]
layout_mode = 2

[node name="MenuButtons" type="BoxContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1
script = ExtResource("2_o0fkt")

[node name="ExitButton" type="Button" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Exit"

[node name="MainMenuButton" type="Button" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="CloseButton" type="Button" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Continue"

[node name="ConfirmMainMenu" type="ConfirmationDialog" parent="."]
auto_translate_mode = 1
initial_position = 2
dialog_text = "Go back to main menu?"

[node name="ConfirmExit" type="ConfirmationDialog" parent="."]
auto_translate_mode = 1
initial_position = 2
dialog_text = "Quit the game?"

[connection signal="pressed" from="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="confirmed" from="ConfirmMainMenu" to="." method="_on_confirm_main_menu_confirmed"]
[connection signal="confirmed" from="ConfirmExit" to="." method="_on_confirm_exit_confirmed"]
